--- a/src/main/features/dashboard/views/macro/caseHistory.njk
+++ b/src/main/features/dashboard/views/macro/caseHistory.njk
@@ -31,10 +31,12 @@
   claimRejectedDefendantDefenceFreeMediationNOForDefendantDetails,
   claimRejectedFreeMediationNOWithoutDQsForClaimantClaimDetails,
   claimRejectedFreeMediationNOWithoutDQsForDefendantClaimDetails,
-  claimRejectedWithDQsForClaimantClaimDetails
-  %}
+  claimRejectedWithDQsForClaimantClaimDetails %}
 
-{% from "./claimStatus/orders.njk" import directionsOrderIssued %}
+{% from "./claimStatus/orders.njk" import
+  directionsOrderIssued,
+  reviewRequester,
+  reviewReceiver %}
 
 {% from "./claimStatus/claimPartAdmittedDefendant.njk" import
   claimPartAdmittedToOweForDefendantClaimDetails,
@@ -219,6 +221,12 @@
       {% endif %}
     {% elif state.status === ClaimStatus.DEFENDANT_REJECTS_WITH_DQS %}
       {{ claimRejectedWithDQsForClaimantClaimDetails(claim, mediationDeadline) }}
+    {% elif state.status === ClaimStatus.REVIEW_ORDER_REQUESTED %}
+      {% if claim.reviewOrder.requestedBy === MadeBy.CLAIMANT.value %}
+        {{ reviewRequester(claim, reconsiderationDeadline) }}
+      {% else %}
+        {{ reviewReceiver(claim, reconsiderationDeadline) }}
+      {% endif %}
     {% endif %}
   {% endfor %}
 {% endmacro %}
@@ -326,6 +334,12 @@
           {{ claimRejectedDefendantDefenceFreeMediationYESForDefendantDetails(claim) }}
         {% else %}
           {{ claimRejectedFreeMediationNOWithoutDQsForDefendantClaimDetails(claim) }}
+        {% endif %}
+      {% elif state.status === ClaimStatus.REVIEW_ORDER_REQUESTED %}
+        {% if claim.reviewOrder.requestedBy === MadeBy.DEFENDANT.value %}
+          {{ reviewRequester(claim, reconsiderationDeadline) }}
+        {% else %}
+          {{ reviewReceiver(claim, reconsiderationDeadline) }}
         {% endif %}
       {% endif %}
   {% endfor %}
