Add in missing content

--- a/src/main/features/directions-questionnaire/views/expert-guidance.njk
+++ b/src/main/features/directions-questionnaire/views/expert-guidance.njk
@@ -30,6 +30,7 @@
       <li>{{ t('Provide questions for the expert to answer in a report.') }}</li>
       <li>{{ t('Provide any extra information the expert asks for.') }}</li>
       <li>{{ t('Pay the expert - you usually both share this cost.') }}</li>
+      <li>{{ t('Send the expert’s report to the court (only one of you will have to do this).') }}</li>
     </ul>
     <form method="post">
       {{ csrfProtection(csrf) }}
