--- a/src/main/features/dashboard/views/macro/claimStatus/partAdmitRejectionClaimant.njk
+++ b/src/main/features/dashboard/views/macro/claimStatus/partAdmitRejectionClaimant.njk
@@ -21,12 +21,12 @@
     </div>
   {% else %}
     <div class="status-block">
-      <h2 class="heading-small">{{ t('We’ll contact you with a mediation appointment') }}</h2>
+      <h2 class="heading-small">{{ t('We’ll contact you to try to arrange a mediation appointment') }}</h2>
 
       <p>{{ t('You rejected the defendant’s admission of {{ amount }}', { amount: claim.response.amount | numeral }) }}</p>
 
       {% if claim.claimantResponse.freeMediation === FreeMediationOption.YES %}
-        <p>{{ t('You’ve both agreed to try mediation. We’ll contact you to arrange a call with the mediator.') }}</p>
+        <p>{{ t('You’ve both agreed to try mediation. We’ll contact you to try to arrange a call with the mediator.') }}</p>
         <p>{{ internalLink('Find out how mediation works', DashboardPaths.howFreeMediationWorksPage.uri) }}</p>
       {% else %}
         <p>{{ t('You need to ' + internalLink('complete a directions questionnaire form ',
