--- a/src/main/features/dashboard/views/macro/claimStatus/statesPaidRejected.njk
+++ b/src/main/features/dashboard/views/macro/claimStatus/statesPaidRejected.njk
@@ -4,7 +4,7 @@
 
 {% macro statesPaidRejectedClaimantDashboard(claim) %}
   {% if featureToggles.mediation and claim.claimantResponse.freeMediation === FreeMediationOption.YES %}
-    {{ t('We’ll contact you with a mediation appointment') }}
+    {{ t('We’ll contact you with a mediation appointment.') }}
   {% else %}
     {{ t('You’ve rejected the defendant’s admission.') }}
   {% endif %}
@@ -113,10 +113,10 @@
 
 {% macro statesPaidRejectionMediationYESDefendantClaimDetails(claim) %}
   <div class="status-block">
-    <h2 class="heading-small">{{ t('We’ll contact you with a mediation appointment') }}</h2>
+    <h2 class="heading-small">{{ t('We’ll contact you to try to arrange a mediation appointment') }}</h2>
     <p>{{ t('{{ claimantName }} has rejected your defence.',
         { claimantName: claim.claimData.claimant.name }) }}</p>
-    <p>{{ t('You’ve both agreed to try mediation. We’ll contact you to arrange a call with the mediator.') }}</p>
+    <p>{{ t('You’ve both agreed to try mediation. We’ll contact you to try to arrange a call with the mediator.') }}</p>
     <p>{{ internalLink('Find out how mediation works', DashboardPaths.howFreeMediationWorksPage.uri) }}</p>
   </div>
 {% endmacro %}
