--- a/src/main/features/response/views/check-and-send.njk
+++ b/src/main/features/response/views/check-and-send.njk
@@ -137,7 +137,7 @@
       {% if draft.isResponsePartiallyAdmittedAndAlreadyPaid() %}
         {{
           timelineCheckAndSend(
-            header = 'Timeline of what happened (optional)',
+            header = 'Your timeline of what happened (optional)',
             timeline = draft.partialAdmission.timeline.getPopulatedRowsOnly(),
             url = ResponsePaths.timelinePage.evaluateUri({ externalId: claim.externalId }),
             bottomBorder = false
@@ -190,7 +190,7 @@
 
         {{
           timelineCheckAndSend(
-            header = 'Timeline of what happened (optional)',
+            header = 'Your timeline of what happened (optional)',
             timeline = draft.timeline.getPopulatedRowsOnly(),
             url = ResponsePaths.timelinePage.evaluateUri({ externalId: claim.externalId }),
             bottomBorder = false
@@ -227,7 +227,7 @@
 
       {{
         timelineCheckAndSend(
-          header = 'Timeline of what happened (optional)',
+          header = 'Your timeline of what happened (optional)',
           timeline = draft.timeline.getPopulatedRowsOnly(),
           url = ResponsePaths.timelinePage.evaluateUri({ externalId: claim.externalId })
         )
