--- a/src/main/features/dashboard/views/macro/caseHistory.njk
+++ b/src/main/features/dashboard/views/macro/caseHistory.njk
@@ -177,14 +177,10 @@
         {{ claimFullAdmissionForClaimantClaimDetails(claim) }}
       {% endif %}
     {% elif state.status === ClaimStatus.CLAIMANT_REJECTED_DEFENDANT_DEFENCE %}
-      {% if claim.directionOrder !== undefined %}
-        {{ directionsOrderIssued(claim, MadeBy.CLAIMANT.value, reconsiderationDeadline, isReviewOrderEligible) }}
+      {% if claim.claimantResponse.freeMediation === FreeMediationOption.NO %}
+        {{ claimRejectedDefendantDefenceFreeMediationNOForClaimantDetails(claim) }}
       {% else %}
-        {% if claim.claimantResponse.freeMediation === FreeMediationOption.NO %}
-          {{ claimRejectedDefendantDefenceFreeMediationNOForClaimantDetails(claim) }}
-        {% else %}
-          {{ claimRejectedDefendantDefenceFreeMediationYESForClaimantDetails(claim) }}
-        {% endif %}
+        {{ claimRejectedDefendantDefenceFreeMediationYESForClaimantDetails(claim) }}
       {% endif %}
     {% elif state.status === ClaimStatus.CLAIMANT_ACCEPTED_DEFENDANT_DEFENCE %}
       {{ claimantAcceptedDefendantDefenceClaimantClaimDetails(claim) }}
@@ -207,11 +203,7 @@
     {% elif state.status === ClaimStatus.ELIGIBLE_FOR_CCJ_AFTER_BREACHED_SETTLEMENT %}
       {{ requestCCJ(claim) }}
     {% elif state.status === ClaimStatus.CLAIMANT_REJECTED_PART_ADMISSION %}
-      {% if claim.directionOrder !== undefined %}
-        {{ directionsOrderIssued(claim, MadeBy.CLAIMANT.value, reconsiderationDeadline, isReviewOrderEligible) }}
-      {% else %}
-        {{ partAdmitRejectedByClaimantClaimDetails(claim) }}
-      {% endif %}
+      {{ partAdmitRejectedByClaimantClaimDetails(claim) }}
     {% elif state.status === ClaimStatus.CLAIMANT_REJECTED_PART_ADMISSION_DQ %}
       {{ partAdmitRejectedByClaimantDQClaimDetails(claim) }}
     {% elif state.status === ClaimStatus.SETTLEMENT_AGREEMENT_REJECTED %}
@@ -228,6 +220,8 @@
       {% endif %}
     {% elif state.status === ClaimStatus.DEFENDANT_REJECTS_WITH_DQS %}
       {{ claimRejectedWithDQsForClaimantClaimDetails(claim, mediationDeadline) }}
+    {% elif state.status === ClaimStatus.ORDER_DRAWN %}
+      {{ directionsOrderIssued(claim, MadeBy.CLAIMANT.value, reconsiderationDeadline, isReviewOrderEligible) }}
     {% elif state.status === ClaimStatus.REVIEW_ORDER_REQUESTED %}
       {% if claim.reviewOrder.requestedBy === MadeBy.CLAIMANT.value %}
         {{ reviewRequester(claim, reconsiderationDeadline) }}
@@ -274,83 +268,77 @@
     {% elif state.status === ClaimStatus.ADMISSION_SETTLEMENT_AGREEMENT_REACHED %}
       {{ settlementAgreementSignedByBothDefendantClaimDetails(claim) }}
     {% elif state.status === ClaimStatus.CLAIMANT_REJECTED_DEFENDANT_DEFENCE %}
-      {% if claim.directionOrder !== undefined %}
-        {{ directionsOrderIssued(claim, MadeBy.DEFENDANT.value, reconsiderationDeadline, isReviewOrderEligible) }}
+      {% if claim.claimantResponse.freeMediation === FreeMediationOption.NO %}
+        {{ claimRejectedDefendantDefenceFreeMediationNOForDefendantDetails(claim) }}
       {% else %}
-        {% if claim.claimantResponse.freeMediation === FreeMediationOption.NO %}
-          {{ claimRejectedDefendantDefenceFreeMediationNOForDefendantDetails(claim) }}
-        {% else %}
-          {{ claimRejectedDefendantDefenceFreeMediationYESForDefendantDetails(claim) }}
-        {% endif %}
+        {{ claimRejectedDefendantDefenceFreeMediationYESForDefendantDetails(claim) }}
       {% endif %}
     {% elif state.status === ClaimStatus.CLAIMANT_ACCEPTED_DEFENDANT_DEFENCE %}
       {{ claimantAcceptedDefendantDefenceDefendantClaimDetails(claim) }}
     {% elif state.status === ClaimStatus.RESPONSE_SUBMITTED or state.status === ClaimStatus.DEFENDANT_REJECTS_WITH_DQS %}
-        {% if claim.response.responseType === domain.ResponseType.FULL_DEFENCE %}
-          {% if claim.response.defenceType === DefenceType.ALREADY_PAID %}
-            {{ claimRejectedAlreadyPaidForDefendantClaimDetails(claim) }}
-          {% elif claim.response.freeMediation === FreeMediationOption.NO %}
-            {{ claimRejectedFreeMediationNOForDefendantClaimDetails(claim) }}
-          {% else %}
-            {{ claimRejectedFreeMediationYESForDefendantClaimDetails(claim) }}
-          {% endif %}
-          {% if not claim.settlement and claim.response.defenceType !== DefenceType.ALREADY_PAID %}
-            {{ _settleOutOfCourtOption (claim) }}
-          {% endif %}
-        {% elif claim.response.responseType === domain.ResponseType.PART_ADMISSION %}
-          {% if claim.response.paymentDeclaration %}
-            {{ claimPartAdmittedAlreadyPaidForDefendantClaimDetails(claim) }}
-          {% else %}
-            {{ claimPartAdmittedToOweForDefendantClaimDetails(claim) }}
-          {% endif %}
-        {% elif claim.response.responseType === domain.ResponseType.FULL_ADMISSION %}
-            {{ claimFullAdmissionForDefendantClaimDetails(claim) }}
-        {% endif %}
-      {% elif state.status === ClaimStatus.OFFER_SUBMITTED %}
-        {{ offerSubmittedForDefendantClaimDetails(claim) }}
-      {% elif state.status === ClaimStatus.OFFER_REJECTED %}
-        {{ offerRejectedForDefendantClaimDetails() }}
-      {% elif state.status === ClaimStatus.OFFER_ACCEPTED %}
-        {{ offerAcceptedForDefendantClaimDetails(claim) }}
-      {% elif state.status === ClaimStatus.OFFER_SETTLEMENT_REACHED %}
-        {{ offerSettlementReachedForDefendant(claim) }}
-      {% elif state.status === ClaimStatus.CLAIMANT_REJECTED_PART_ADMISSION %}
-        {% if claim.directionOrder !== undefined %}
-          {{ directionsOrderIssued(claim, MadeBy.DEFENDANT.value, reconsiderationDeadline, isReviewOrderEligible) }}
+      {% if claim.response.responseType === domain.ResponseType.FULL_DEFENCE %}
+        {% if claim.response.defenceType === DefenceType.ALREADY_PAID %}
+          {{ claimRejectedAlreadyPaidForDefendantClaimDetails(claim) }}
+        {% elif claim.response.freeMediation === FreeMediationOption.NO %}
+          {{ claimRejectedFreeMediationNOForDefendantClaimDetails(claim) }}
         {% else %}
-          {{ partAdmitRejectedByClaimantDefendantClaimDetails(claim) }}
+          {{ claimRejectedFreeMediationYESForDefendantClaimDetails(claim) }}
         {% endif %}
-      {% elif state.status === ClaimStatus.CLAIMANT_REJECTED_PART_ADMISSION_DQ %}
-        {{ partAdmitRejectedByClaimantDefendantDQClaimDetails(claim) }}
-      {% elif state.status === ClaimStatus.CLAIMANT_REJECTED_DEFENDANT_AS_BUSINESS_RESPONSE %}
-        {{ partAdmitRejectedByClaimantDefendantClaimDetails(claim) }}
-      {% elif state.status === ClaimStatus.CLAIMANT_ACCEPTED_DEFENDANT_FULL_ADMISSION_AS_BUSINESS_WITH_ALTERNATIVE_PAYMENT_INTENTION_RESPONSE %}
-        {{ claimFullAdmissionForDefendantClaimDetails(claim) }}
-      {% elif state.status === ClaimStatus.CLAIMANT_ACCEPTED_DEFENDANT_PART_ADMISSION_AS_BUSINESS_WITH_ALTERNATIVE_PAYMENT_INTENTION_RESPONSE %}
-        {{ claimPartAdmittedToOweForDefendantClaimDetails(claim) }}
-      {% elif state.status === ClaimStatus.SETTLEMENT_AGREEMENT_REJECTED %}
-        {{ settlementAgreementRejectedDefendantClaimDetails(claim) }}
-      {% elif state.status === ClaimStatus.PART_ADMIT_PAY_IMMEDIATELY %}
-        {{ partAdmittedAcceptedPayImmediatelyDefendantClaimDetails(claim) }}
-      {% elif state.status === ClaimStatus.CLAIMANT_ACCEPTED_STATES_PAID %}
-        {{ statesPaidClaimSettledDefendantsDetails(claim, csrf) }}
-      {% elif state.status === ClaimStatus.CLAIMANT_REJECTED_STATES_PAID %}
-        {{ statesPaidRejectedDefendantClaimDetails(claim) }}
-      {% elif state.status === ClaimStatus.CLAIMANT_REQUESTS_CCJ_AFTER_DEFENDANT_REJECTS_SETTLEMENT %}
-        {{ CCJAfterDefendantDidNotSignSettlementAgreementClaimDetails(claim) }}
-      {% elif state.status === ClaimStatus.CLAIMANT_REJECTED_DEFENDANT_DEFENCE_NO_DQ %}
-        {% if claim.claimantResponse.freeMediation === FreeMediationOption.YES %}
-          {{ claimRejectedDefendantDefenceFreeMediationYESForDefendantDetails(claim) }}
+        {% if not claim.settlement and claim.response.defenceType !== DefenceType.ALREADY_PAID %}
+          {{ _settleOutOfCourtOption (claim) }}
+        {% endif %}
+      {% elif claim.response.responseType === domain.ResponseType.PART_ADMISSION %}
+        {% if claim.response.paymentDeclaration %}
+          {{ claimPartAdmittedAlreadyPaidForDefendantClaimDetails(claim) }}
         {% else %}
-          {{ claimRejectedFreeMediationNOWithoutDQsForDefendantClaimDetails(claim) }}
+          {{ claimPartAdmittedToOweForDefendantClaimDetails(claim) }}
         {% endif %}
-      {% elif state.status === ClaimStatus.REVIEW_ORDER_REQUESTED %}
-        {% if claim.reviewOrder.requestedBy === MadeBy.DEFENDANT.value %}
-          {{ reviewRequester(claim, reconsiderationDeadline) }}
-        {% else %}
-          {{ reviewReceiver(claim, reconsiderationDeadline) }}
-        {% endif %}
+      {% elif claim.response.responseType === domain.ResponseType.FULL_ADMISSION %}
+          {{ claimFullAdmissionForDefendantClaimDetails(claim) }}
       {% endif %}
+    {% elif state.status === ClaimStatus.OFFER_SUBMITTED %}
+      {{ offerSubmittedForDefendantClaimDetails(claim) }}
+    {% elif state.status === ClaimStatus.OFFER_REJECTED %}
+      {{ offerRejectedForDefendantClaimDetails() }}
+    {% elif state.status === ClaimStatus.OFFER_ACCEPTED %}
+      {{ offerAcceptedForDefendantClaimDetails(claim) }}
+    {% elif state.status === ClaimStatus.OFFER_SETTLEMENT_REACHED %}
+      {{ offerSettlementReachedForDefendant(claim) }}
+    {% elif state.status === ClaimStatus.CLAIMANT_REJECTED_PART_ADMISSION %}
+      {{ partAdmitRejectedByClaimantDefendantClaimDetails(claim) }}
+    {% elif state.status === ClaimStatus.CLAIMANT_REJECTED_PART_ADMISSION_DQ %}
+      {{ partAdmitRejectedByClaimantDefendantDQClaimDetails(claim) }}
+    {% elif state.status === ClaimStatus.CLAIMANT_REJECTED_DEFENDANT_AS_BUSINESS_RESPONSE %}
+      {{ partAdmitRejectedByClaimantDefendantClaimDetails(claim) }}
+    {% elif state.status === ClaimStatus.CLAIMANT_ACCEPTED_DEFENDANT_FULL_ADMISSION_AS_BUSINESS_WITH_ALTERNATIVE_PAYMENT_INTENTION_RESPONSE %}
+      {{ claimFullAdmissionForDefendantClaimDetails(claim) }}
+    {% elif state.status === ClaimStatus.CLAIMANT_ACCEPTED_DEFENDANT_PART_ADMISSION_AS_BUSINESS_WITH_ALTERNATIVE_PAYMENT_INTENTION_RESPONSE %}
+      {{ claimPartAdmittedToOweForDefendantClaimDetails(claim) }}
+    {% elif state.status === ClaimStatus.SETTLEMENT_AGREEMENT_REJECTED %}
+      {{ settlementAgreementRejectedDefendantClaimDetails(claim) }}
+    {% elif state.status === ClaimStatus.PART_ADMIT_PAY_IMMEDIATELY %}
+      {{ partAdmittedAcceptedPayImmediatelyDefendantClaimDetails(claim) }}
+    {% elif state.status === ClaimStatus.CLAIMANT_ACCEPTED_STATES_PAID %}
+      {{ statesPaidClaimSettledDefendantsDetails(claim, csrf) }}
+    {% elif state.status === ClaimStatus.CLAIMANT_REJECTED_STATES_PAID %}
+      {{ statesPaidRejectedDefendantClaimDetails(claim) }}
+    {% elif state.status === ClaimStatus.CLAIMANT_REQUESTS_CCJ_AFTER_DEFENDANT_REJECTS_SETTLEMENT %}
+      {{ CCJAfterDefendantDidNotSignSettlementAgreementClaimDetails(claim) }}
+    {% elif state.status === ClaimStatus.CLAIMANT_REJECTED_DEFENDANT_DEFENCE_NO_DQ %}
+      {% if claim.claimantResponse.freeMediation === FreeMediationOption.YES %}
+        {{ claimRejectedDefendantDefenceFreeMediationYESForDefendantDetails(claim) }}
+      {% else %}
+        {{ claimRejectedFreeMediationNOWithoutDQsForDefendantClaimDetails(claim) }}
+      {% endif %}
+    {% elif state.status === ClaimStatus.REVIEW_ORDER_REQUESTED %}
+      {% if claim.reviewOrder.requestedBy === MadeBy.DEFENDANT.value %}
+        {{ reviewRequester(claim, reconsiderationDeadline) }}
+      {% else %}
+        {{ reviewReceiver(claim, reconsiderationDeadline) }}
+      {% endif %}
+    {% elif state.status === ClaimStatus.ORDER_DRAWN %}
+      {{ directionsOrderIssued(claim, MadeBy.DEFENDANT.value, reconsiderationDeadline, isReviewOrderEligible) }}
+    {% endif %}
   {% endfor %}
 {% endmacro %}
 
