Update logic for DQ qualified statement of truth

--- a/src/main/views/macro/statementOfTruth.njk
+++ b/src/main/views/macro/statementOfTruth.njk
@@ -52,7 +52,7 @@ macro statementOfTruth(
     legendHidden = true
   ) }}
 
-  {% if form.model.type == SignatureType.DIRECTION_QUESTIONNAIRE %}
+  {% if form.model.type == SignatureType.DIRECTION_QUESTIONNAIRE or form.model.type == SignatureType.DIRECTION_QUESTIONNAIRE_QUALIFIED %}
     {{ checkboxSingle(
       label = 'The hearing requirement details on this page are true to the best of my knowledge.',
       name = 'directionsQuestionnaireSigned',
