--- a/src/main/features/dashboard/views/macro/claimStatus/claimantResponse.njk
+++ b/src/main/features/dashboard/views/macro/claimStatus/claimantResponse.njk
@@ -12,18 +12,16 @@
 
   {% if featureToggles.mediation and claim.claimantResponse.freeMediation === FreeMediationOption.YES %}
       <div class="status-block">
-        <h2 class="heading-small">{{ t('We’ll contact you to try to arrange a mediation appointment') }}</h2>
-        <p>{{ t('You’ve rejected the defendant’s response.')}}</p>
-        <p>{{ t('You’ve both agreed to try mediation. We’ll contact you to try to arrange a call with the mediator.') }}</p>
-        <p>{{ internalLink('Find out how mediation works', DashboardPaths.howFreeMediationWorksPage.uri) }}</p>
+      <h2 class="heading-small">{{ t('We’ll contact you to try to arrange a mediation appointment') }}</h2>
+      <p>{{ t('You’ve rejected the defendant’s response.')}}</p>
+      <p>{{ t('You’ve both agreed to try mediation. We’ll contact you to try to arrange a call with the mediator.') }}</p>
+      <p>{{ internalLink(t('Find out how mediation works'), DashboardPaths.howFreeMediationWorksPage.uri) }}</p>
       </div>
   {%  else %}
 
       <h2 class="heading-small">{{ t('You need to send the defendant’s financial details to the court') }}</h2>
-
       <p>{{ t('Make sure you include your claim number: {{ claimNumber }}.', { claimNumber: claimNumber }) }}</p>
       <p>{{ t('The court will review the details to see if the defendant can afford your repayment plan.') }}</p>
-
       <h3 class="heading-small">{{ t('Use this address') }}</h3>
       <p>{{ t('The defendant should have sent you the details - send them to:') }}</p>
 
@@ -39,7 +37,7 @@
       <p>{{ t('A County Court Judgment (CCJ) will be issued. This requires the defendant to pay according to the
         terms of the plan.') }}
       <h4 class="heading-small">{{ t('If the court believes the defendant can not afford your plan') }}</h4>
-      <p>{{ t('The court will set its own repayment terms and issue a CCJ.') }}</p
+      <p>{{ t('The court will set its own repayment terms and issue a CCJ.') }}</p>
   {% endif %}
 
 {% endmacro %}
