--- a/src/main/features/dashboard/views/macro/claimStatus/statesPaidRejected.njk
+++ b/src/main/features/dashboard/views/macro/claimStatus/statesPaidRejected.njk
@@ -32,7 +32,7 @@
 
       <p>{{ t('You’ve rejected the defendant’s response.')}}</p>
       <p>{{ t('You’ve both agreed to try mediation. We’ll contact you to try to arrange a call with the mediator.') }}</p>
-      <p>{{ internalLink('Find out how mediation works', DashboardPaths.howFreeMediationWorksPage.uri) }}</p>
+      <p>{{ internalLink(t('Find out how mediation works'), DashboardPaths.howFreeMediationWorksPage.uri) }}</p>
 
     </div>
   {% else %}
@@ -45,7 +45,7 @@
     <h2 class="heading-small">{{ t('You’ve rejected the defendant’s admission') }}</h2>
     <p>{{ t('They said they owe {{ amount }}.', { amount: amount | numeral }) }}</p>
     <p>{{ t('You’ve both agreed to try mediation. The Small Claims Mediation Service will contact you to arrange a call with the mediator.') }}</p>
-    {{ externalLink('Find out how mediation works', 'https://www.gov.uk/government/publications/small-claims-mediation-service-ex730') }}
+    {{ externalLink(t('Find out how mediation works'), 'https://www.gov.uk/government/publications/small-claims-mediation-service-ex730') }}
 
     <p>{{ downloadTheirResponseLink(claim) }}</p>
   {% endif %}
@@ -116,7 +116,7 @@
 
 {% macro statesPaidRejectedMediationYESDefendantClaimDetails(claim) %}
   <p>{{ t('They agreed to try mediation. We’ll contact you with details of your appointment.') }}</p>
-  {{ externalLink('Find out how mediation works', 'https://www.gov.uk/government/publications/small-claims-mediation-service-ex730') }}
+  {{ externalLink(t('Find out how mediation works'), 'https://www.gov.uk/government/publications/small-claims-mediation-service-ex730') }}
 {% endmacro %}
 
 {% macro statesPaidRejectionMediationYESDefendantClaimDetails(claim) %}
@@ -125,7 +125,7 @@
     <p>{{ t('{{ claimantName }} has rejected your defence.',
         { claimantName: claim.claimData.claimant.name }) }}</p>
     <p>{{ t('You’ve both agreed to try mediation. We’ll contact you to try to arrange a call with the mediator.') }}</p>
-    <p>{{ internalLink('Find out how mediation works', DashboardPaths.howFreeMediationWorksPage.uri) }}</p>
+    <p>{{ internalLink(t('Find out how mediation works'), DashboardPaths.howFreeMediationWorksPage.uri) }}</p>
   </div>
 {% endmacro %}
 
