fix defendant dashboard

--- a/src/main/features/dashboard/views/macro/claimStatus/orders.njk
+++ b/src/main/features/dashboard/views/macro/claimStatus/orders.njk
@@ -33,8 +33,7 @@
       {{ internalLink(t('Download {{ claimantName }}’s request to see what they asked ', { claimantName: claim.claimData.claimant.name }), OrdersPaths.reviewOrderReceiver.evaluateUri({ externalId: claim.externalId })) }}
       {{ t('(PDF).') }}
       <h2 class="heading-small">{{ t('Comment on {{ claimantName }}’s request', { claimantName: claim.claimData.claimant.name }) }}</h2>
-      <p>{{ t('If you want to comment on the request, email your comments to the court and to {{ claimantName }} before 4pm on {{ deadline }}.',
-          { claimantName: claim.claimData.claimant.name, deadline: reconsiderationDeadline | date }) }}</p>
+      <p>{{ t('If you want to comment on the request, email your comments to the court and to {{ claimantName }} before 4pm on {{ deadline }}.', { claimantName: claim.claimData.claimant.name, deadline: reconsiderationDeadline | date }) }}</p>
     {% else %}
       {{ internalLink(t('Download {{ defendantName }}’s request to see what they asked ', { defendantName: claim.claimData.defendant.name }), OrdersPaths.reviewOrderReceiver.evaluateUri({ externalId: claim.externalId })) }}
       {{ t('(PDF).') }}
@@ -45,7 +44,7 @@
     <p>{{ t('Include the claim number ({{ claimNumber }}) in the emails.', { claimNumber: claim.claimNumber }) }}</p>
     <p>{{ t('The court’s email address is:') }} <a href="mailto:{{ supportEmailAddress }}">{{ supportEmailAddress }}</a></p>
     {% if claim.reviewOrder.requestedBy === MadeBy.CLAIMANT.value %}
-      <p>{{ t('{{ claimantName }}’s email address is:', { claimantName: claim.claimData.claimant.name }) }} <a href="mailto:{{ claim.claimData.claimant.email }}">{{ claim.claimData.claimant.email }}</a></p>
+      <p>{{ t('{{ claimantName }}’s email address is:', { claimantName: claim.claimData.claimant.name }) }} <a href="mailto:{{ claim.claimantEmail }}">{{ claim.claimantEmail }}</a></p>
     {% else %}
       <p>{{ t('{{ defendantName }}’s email address is:', { defendantName: claim.claimData.defendant.name }) }} <a href="mailto:{{ claim.claimData.defendant.email }}">{{ claim.claimData.defendant.email }}</a></p>
     {% endif %}
