--- a/src/main/views/macro/form.njk
+++ b/src/main/views/macro/form.njk
@@ -1,4 +1,4 @@
-{% macro input(label, name, form, hint, type='text', inputClass='', compound=false, autocomplete='on', labelClass='', maxLength='') %}
+{% macro input(label, name, form, hint, type='text', inputClass='', compound=false, autocomplete='on', labelClass='', maxLength='', extraOptionalLine='') %}
   {% set error = form.errorFor(name) %}
   {% set formGroupClass = 'form-group-compound' if compound else 'form-group' %}
   <div class="{{ formGroupClass }} {% if error %}form-group-error{% endif %}">
@@ -14,11 +14,14 @@
            class="form-control {{ inputClass }} {% if error %}form-control-error{% endif %}"
            {% if maxLength %}maxlength="{{ maxLength }}"{% endif %}
            value="{{ (form.rawDataFor(name) if error else form.valueFor(name)) | default('') }}">
+    {% if extraOptionalLine %}
+      <div class="bloc">{{ extraOptionalLine }}</div>
+    {% endif %}
   </div>
 {% endmacro %}
 
-{% macro textInput(label, name, form, hint, inputClass='', compound=false, autocomplete='on', maxLength) %}
-  {{ input(label, name, form, hint, 'text', inputClass, compound, autocomplete, maxLength=maxLength) }}
+{% macro textInput(label, name, form, hint, inputClass='', compound=false, autocomplete='on', maxLength, extraOptionalLine) %}
+  {{ input(label, name, form, hint, 'text', inputClass, compound, autocomplete, maxLength=maxLength, extraOptionalLine=extraOptionalLine) }}
 {% endmacro %}
 
 {% macro numericInput(label, name, form, hint, inputClass='', compound=false, autocomplete='on') %}
