--- a/src/main/features/dashboard/views/macro/caseStatus.njk
+++ b/src/main/features/dashboard/views/macro/caseStatus.njk
@@ -91,7 +91,9 @@
 
 {% from "./claimStatus/orders.njk" import
   directionsOrderIssuedClaimantDashboard,
-  directionsOrderIssuedDefendantDashboard %}
+  directionsOrderIssuedDefendantDashboard,
+  directionsOrderReviewRequestedClaimantDashboard,
+  directionsOrderReviewRequestedDefendantDashboard %}
 
 {% macro caseStatusForClaimant(status, claim) %}
   {% if status === ClaimStatus.PAID_IN_FULL or status === ClaimStatus.PAID_IN_FULL_CCJ_CANCELLED or status === ClaimStatus.PAID_IN_FULL_CCJ_SATISFIED
@@ -179,6 +181,8 @@
     {{ claimRejectedWithDQsForClaimantDashboard(claim) }}
   {% elif status === ClaimStatus.ORDER_DRAWN %}
     {{ directionsOrderIssuedClaimantDashboard() }}
+  {% elif status === ClaimStatus.REVIEW_ORDER_REQUESTED %}
+    {{ directionsOrderReviewRequestedClaimantDashboard(claim) }}
   {% endif %}
 {% endmacro %}
 
@@ -269,5 +273,7 @@
     {{ claimRejectedWithDQsForDefendantDashboard(claim) }}
   {% elif status === ClaimStatus.ORDER_DRAWN %}
     {{ directionsOrderIssuedDefendantDashboard() }}
+  {% elif status === ClaimStatus.REVIEW_ORDER_REQUESTED %}
+    {{ directionsOrderReviewRequestedDefendantDashboard(claim) }}
   {% endif %}
 {% endmacro %}
