--- a/src/main/features/dashboard/views/macro/claimStatus/orders.njk
+++ b/src/main/features/dashboard/views/macro/claimStatus/orders.njk
@@ -59,6 +59,22 @@
   {{ t('Send us more details before the hearing') }}
 {% endmacro %}
 
+{% macro directionsOrderReviewRequestedClaimantDashboard(claim) %}
+  {% if claim.reviewOrder.requestedBy === MadeBy.CLAIMANT.value %}
+    {{ t('You’ve asked the court to review the order') }}
+  {% else %}
+    {{ t('Respond to the defendant’s request for a judge to review the order.') }}
+  {% endif %}
+{% endmacro %}
+
+{% macro directionsOrderReviewRequestedDefendantDashboard(claim) %}
+  {% if claim.reviewOrder.requestedBy === MadeBy.DEFENDANT.value %}
+    {{ t('You’ve asked the court to review the order') }}
+  {% else %}
+    {{ t('Respond to the claimant’s request for a judge to review the order.') }}
+  {% endif %}
+{% endmacro %}
+
 {% macro directionsOrderIssued(claim, party, reconsiderationDeadline, isReviewOrderEligible) %}
   <div class="status-block">
     <h2 class="heading-small">{{ t('Send us more details before the hearing') }}</h2>
