Remove comment section once deadline has passed

--- a/src/main/features/dashboard/views/macro/claimStatus/orders.njk
+++ b/src/main/features/dashboard/views/macro/claimStatus/orders.njk
@@ -16,7 +16,7 @@
   </div>
 {% endmacro %}
 
-{% macro reviewReceiver(claim, reconsiderationDeadline) %}
+{% macro reviewReceiver(claim, reconsiderationDeadline, isReconsiderationDeadlinePast) %}
   <div class="status-block">
     {% if claim.reviewOrder.requestedBy === MadeBy.CLAIMANT.value %}
       <h2 class="heading-small">{{ t('Read {{ claimantName }}’s request', { claimantName: claim.claimData.claimant.name }) }}</h2>
@@ -32,14 +32,18 @@
     {% if claim.reviewOrder.requestedBy === MadeBy.CLAIMANT.value %}
       {{ internalLink(t('Download {{ claimantName }}’s request to see what they asked ', { claimantName: claim.claimData.claimant.name }), OrdersPaths.reviewOrderReceiver.evaluateUri({ externalId: claim.externalId })) }}
       {{ t('(PDF).') }}
-      <h2 class="heading-small">{{ t('Comment on {{ claimantName }}’s request', { claimantName: claim.claimData.claimant.name }) }}</h2>
-      <p>{{ t('If you want to comment on the request, email your comments to the court and to {{ claimantName }} before 4pm on {{ deadline }}.', { claimantName: claim.claimData.claimant.name, deadline: reconsiderationDeadline | date }) }}</p>
+      {% if not isReconsiderationDeadlinePast %}
+        <h2 class="heading-small">{{ t('Comment on {{ claimantName }}’s request', { claimantName: claim.claimData.claimant.name }) }}</h2>
+        <p>{{ t('If you want to comment on the request, email your comments to the court and to {{ claimantName }} before 4pm on {{ deadline }}.', { claimantName: claim.claimData.claimant.name, deadline: reconsiderationDeadline | date }) }}</p>
+      {% endif %}
     {% else %}
       {{ internalLink(t('Download {{ defendantName }}’s request to see what they asked ', { defendantName: claim.claimData.defendant.name }), OrdersPaths.reviewOrderReceiver.evaluateUri({ externalId: claim.externalId })) }}
       {{ t('(PDF).') }}
-      <h2 class="heading-small">{{ t('Comment on {{ defendantName }}’s request', { defendantName: claim.claimData.defendant.name }) }}</h2>
-      <p>{{ t('If you want to comment on the request, email your comments to the court and to {{ defendantName }} before 4pm on {{ deadline }}.',
+      {% if not isReconsiderationDeadlinePast %}
+        <h2 class="heading-small">{{ t('Comment on {{ defendantName }}’s request', { defendantName: claim.claimData.defendant.name }) }}</h2>
+        <p>{{ t('If you want to comment on the request, email your comments to the court and to {{ defendantName }} before 4pm on {{ deadline }}.',
           { defendantName: claim.claimData.defendant.name, deadline: reconsiderationDeadline | date }) }}</p>
+      {% endif %}
     {% endif %}
     <p>{{ t('Include the claim number ({{ claimNumber }}) in the emails.', { claimNumber: claim.claimNumber }) }}</p>
     <p>{{ t('The court’s email address is:') }} <a href="mailto:{{ supportEmailAddress }}">{{ supportEmailAddress }}</a></p>
