--- a/src/main/features/dashboard/views/macro/caseHistory.njk
+++ b/src/main/features/dashboard/views/macro/caseHistory.njk
@@ -121,7 +121,7 @@
   statesPaidClaimSettledClaimantDetails,
   statesPaidClaimSettledDefendantsDetails %}
 
-{% macro caseHistoryForClaimantClaimDetails(claim, csrf, mediationDeadline, reconsiderationDeadline, isReviewOrderEligible) %}
+{% macro caseHistoryForClaimantClaimDetails(claim, csrf, mediationDeadline, reconsiderationDeadline, isReviewOrderEligible, isReconsiderationDeadlinePast) %}
   {% for state in claim.stateHistory %}
     {% if state.status === ClaimStatus.PAID_IN_FULL_LINK_ELIGIBLE %}
       {{ paidInFullClaimantClaimDetails(claim.externalId) }}
@@ -226,14 +226,14 @@
       {% if claim.reviewOrder.requestedBy === MadeBy.CLAIMANT.value %}
         {{ reviewRequester(claim, reconsiderationDeadline) }}
       {% else %}
-        {{ reviewReceiver(claim, reconsiderationDeadline) }}
+        {{ reviewReceiver(claim, reconsiderationDeadline, isReconsiderationDeadlinePast) }}
       {% endif %}
       {{ directionsOrderIssued(claim, MadeBy.CLAIMANT.value, reconsiderationDeadline, isReviewOrderEligible) }}
     {% endif %}
   {% endfor %}
 {% endmacro %}
 
-{% macro caseHistoryForDefendantClaimDetails(claim, reconsiderationDeadline, isReviewOrderEligible) %}
+{% macro caseHistoryForDefendantClaimDetails(claim, reconsiderationDeadline, isReviewOrderEligible, isReconsiderationDeadlinePast) %}
   {% for state in claim.stateHistory %}
     {% if state.status === ClaimStatus.NO_RESPONSE %}
       {{ noResponseForDefendantClaimDetails(claim) }}
@@ -335,7 +335,7 @@
       {% if claim.reviewOrder.requestedBy === MadeBy.DEFENDANT.value %}
         {{ reviewRequester(claim, reconsiderationDeadline) }}
       {% else %}
-        {{ reviewReceiver(claim, reconsiderationDeadline) }}
+        {{ reviewReceiver(claim, reconsiderationDeadline, isReconsiderationDeadlinePast) }}
       {% endif %}
       {{ directionsOrderIssued(claim, MadeBy.DEFENDANT.value, reconsiderationDeadline, isReviewOrderEligible) }}
     {% elif state.status === ClaimStatus.ORDER_DRAWN %}
